# CUDA-Accelerated-NBody-Simulation

./: CMakeLists.txt  Makefile  README.md  build.sh  requirements.txt  visualize.py
src/: simulation.cu
